# Bazar

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  randomwalk.py
database/: stockmarket_database.cpp  stockmarket_database.db
examples/: demo_database_manager.cpp  demo_qt_1.cpp  demo_sqlite.cpp
extra/: demo_pybind11.py
html/: annotated.html  class_database_manager-members.html  class_database_manager.html  classes.html  database__manager_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js  struct_item-members.html  struct_item.html  struct_item__user-members.html  struct_item__user.html  struct_stats-members.html  struct_stats.html  struct_user-members.html  struct_user.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
include/: database_manager.hpp
rest_client/handelsplatz/: ClientController.py  LoginWindow.py  SignUpWindow.py  StockmarketDatabinder.py  StockmarketDialog.py  StockmarketWindow.py  TitleScreenWindow.py  main.py
rest_server/: StockmarketController.py  StockmarketService.py  main.py
src/: database_manager.cpp
tests/: database_manager_test.cpp  stockmarket_database.db
